# face-clustering

./: .gitignore  LICENSE.md  README.md  config.py  pyproject.toml
app/: __init__.py  models.py  routes.py
app/templates/: login.html  register.html
flask_clustering/: __init__.py  auth.py  cluster.py  db.py  file.py  resource.py  schema.sql  test.py
flask_clustering/static/: style.css
flask_clustering/templates/: base.html  resource.py
flask_clustering/templates/file/: create.html  file_detail.html  index.html  update.html
migrations/versions/: 8685d1604979_.py  ba1228206e10_.py
