[tool.poetry]
name = "face-clustering"
version = "0.1.0"
description = ""
authors = ["hanchi <igam0000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
face_recognition = "^1.3.0"
opencv-python = "^4.2.0"
flask = "^1.1.1"
pytest = "^5.3.5"
coverage = "^5.0.3"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
